--- a/accessibility.html
+++ b/accessibility.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Accessibility — CREATURE: A New Musical</title>
+		<title>Accessibility — GILLMAN: A New Musical</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&family=Bebas+Neue&family=DM+Sans:wght@300;400;500;700&display=swap"
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<nav class="nav scrolled" id="mainNav">
-			<a href="index.html" class="nav-logo">CREATURE</a>
+			<a href="index.html" class="nav-logo">GILLMAN</a>
 			<ul class="nav-links" id="navLinks">
 				<li><a href="index.html#story">The Story</a></li>
 				<li><a href="index.html#numbers">The Numbers</a></li>
@@ -46,7 +46,7 @@
 			<h2>Our Commitment</h2>
 			<p>
 				We believe that every audience member deserves to experience the magic
-				of CREATURE. We are committed to making our production accessible to all
+				of GILLMAN. We are committed to making our production accessible to all
 				patrons, including those with disabilities. We work closely with each of
 				our venue partners to ensure a welcoming and accommodating environment
 				for every guest.
@@ -86,7 +86,7 @@
 				<li>Neck loops and headsets available</li>
 			</ul>
 			<h2>Sensory Information</h2>
-			<p>CREATURE contains the following sensory elements:</p>
+			<p>GILLMAN contains the following sensory elements:</p>
 			<ul>
 				<li>Theatrical haze and fog effects</li>
 				<li>Strobe lighting effects during select scenes</li>
@@ -106,7 +106,7 @@
 				reach out.
 			</p>
 			<div class="contact-card">
-				<p><strong>Email:</strong> accessibility@creaturemusical.com</p>
+				<p><strong>Email:</strong> placeholderemail@email.com</p>
 				<p><strong>Phone:</strong> Contact number TBA</p>
 			</div>
 		</main>
@@ -114,7 +114,7 @@
 			<div class="footer-inner">
 				<div class="footer-grid">
 					<div class="footer-brand">
-						<div class="footer-logo">CREATURE</div>
+						<div class="footer-logo">GILLMAN</div>
 						<p>
 							A new musical inspired by the classic tale of the Gill Man. Coming
 							to stages everywhere.
@@ -146,7 +146,7 @@
 					</div>
 				</div>
 				<div class="footer-bottom">
-					<p>&copy; 2026 Creature: A New Musical. All rights reserved.</p>
+					<p>&copy; 2026 GILLMAN: A New Musical. All rights reserved.</p>
 					<div class="footer-socials">
 						<a href="#">Instagram</a><a href="#">TikTok</a
 						><a href="#">X / Twitter</a><a href="#">Facebook</a
