--- a/faq.html
+++ b/faq.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>FAQ — CREATURE: A New Musical</title>
+		<title>FAQ — GILLMAN: A New Musical</title>
 		<meta
 			name="description"
-			content="Frequently asked questions about CREATURE — A New Musical."
+			content="Frequently asked questions about GILLMAN — A New Musical."
 		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<nav class="nav scrolled" id="mainNav">
-			<a href="index.html" class="nav-logo">CREATURE</a>
+			<a href="index.html" class="nav-logo">GILLMAN</a>
 			<ul class="nav-links" id="navLinks">
 				<li><a href="index.html#story">The Story</a></li>
 				<li><a href="index.html#numbers">The Numbers</a></li>
@@ -59,7 +59,7 @@
 					</button>
 					<div class="faq-answer">
 						<p>
-							CREATURE runs approximately 2 hours and 30 minutes, including one
+							GILLMAN runs approximately 2 hours and 30 minutes, including one
 							15-minute intermission.
 						</p>
 					</div>
@@ -72,7 +72,7 @@
 					</button>
 					<div class="faq-answer">
 						<p>
-							CREATURE is recommended for ages 10 and up. Children under 4 are
+							GILLMAN is recommended for ages 10 and up. Children under 4 are
 							not permitted in the theatre. The show contains theatrical fog,
 							strobe effects, and moments of dramatic intensity.
 						</p>
@@ -141,7 +141,7 @@
 					</button>
 					<div class="faq-answer">
 						<p>
-							Official CREATURE merchandise is available at each venue's
+							Official GILLMAN merchandise is available at each venue's
 							front-of-house stand and online. Details coming soon.
 						</p>
 					</div>
@@ -153,7 +153,7 @@
 			<div class="footer-inner">
 				<div class="footer-grid">
 					<div class="footer-brand">
-						<div class="footer-logo">CREATURE</div>
+						<div class="footer-logo">GILLMAN</div>
 						<p>
 							A new musical inspired by the classic tale of the Gill Man. Coming
 							to stages everywhere.
@@ -184,7 +184,7 @@
 						</ul>
 					</div>
 				<div class="footer-bottom">
-					<p>&copy; 2026 Creature: A New Musical. All rights reserved.</p>
+					<p>&copy; 2026 GILLMAN: A New Musical. All rights reserved.</p>
 					<div class="footer-socials">
 						<a href="#">Instagram</a><a href="#">TikTok</a
 						><a href="#">X / Twitter</a><a href="#">Facebook</a
