--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 				<p class="creator-label">Script · Music · Lyrics · Orchestrations</p>
 				<h2 class="creator-title">From the <em>Mind</em> of</h2>
 				<!-- EDIT: Replace with creator's name -->
-				<div class="creator-name">CREATOR NAME</div>
+				<div class="creator-name">ANDREW SNELLING</div>
 				<div class="creator-roles">
 					<span class="creator-role-tag">Script</span>
 					<span class="creator-role-tag">Music</span>
