gave dropdown for songs

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 						</div>
 						<span class="song-type">Female Ballad</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">04</span>
 						<div>
 							<div class="song-title">Untitled Orchestral Piece</div>
@@ -277,7 +277,7 @@
 						</div>
 						<span class="song-type">Instrumental</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">05</span>
 						<div>
 							<div class="song-title">Under His Spell</div>
@@ -285,7 +285,7 @@
 						</div>
 						<span class="song-type">Female Ballad</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">06</span>
 						<div>
 							<div class="song-title">Rita</div>
@@ -293,7 +293,7 @@
 						</div>
 						<span class="song-type">Sea Shanty</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">07</span>
 						<div>
 							<div class="song-title">Monsters to Mice</div>
@@ -301,23 +301,23 @@
 						</div>
 						<span class="song-type">Male Solo</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">08</span>
 						<div>
 							<div class="song-title">Mayhem</div>
-							<div class="song-char">Riley & Charlotte</div>
+							<div class="song-char">Riley &amp; Charlotte</div>
 						</div>
 						<span class="song-type">Male/Female Duet</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">09</span>
 						<div>
-							<div class="song-title">I Don't Beed Anyone (But Me)</div>
+							<div class="song-title">I Don't Need Anyone (But Me)</div>
 							<div class="song-char">Charlotte</div>
 						</div>
 						<span class="song-type">Ballade</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">10</span>
 						<div>
 							<div class="song-title">Forever Free</div>
@@ -325,7 +325,7 @@
 						</div>
 						<span class="song-type">Female Solo</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">11</span>
 						<div>
 							<div class="song-title">Are We</div>
@@ -333,7 +333,7 @@
 						</div>
 						<span class="song-type">Male/Female Duet</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">12</span>
 						<div>
 							<div class="song-title">We Should Be Heroes</div>
@@ -341,7 +341,7 @@
 						</div>
 						<span class="song-type">Villain Duet</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">13</span>
 						<div>
 							<div class="song-title">A Family Thing</div>
@@ -349,7 +349,7 @@
 						</div>
 						<span class="song-type">Duet</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">14</span>
 						<div>
 							<div class="song-title">Release Me</div>
@@ -357,7 +357,7 @@
 						</div>
 						<span class="song-type">Female Solo</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">15</span>
 						<div>
 							<div class="song-title">The Creature Walks Among Us</div>
@@ -365,7 +365,7 @@
 						</div>
 						<span class="song-type">Showstopper</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">16</span>
 						<div>
 							<div class="song-title">Pandemonium</div>
@@ -373,7 +373,7 @@
 						</div>
 						<span class="song-type">11 O'Clock Number</span>
 					</div>
-					<div class="song-item">
+					<div class="song-item" data-hidden="true" style="display: none">
 						<span class="song-num">17</span>
 						<div>
 							<div class="song-title">Free At Last</div>
@@ -382,6 +382,10 @@
 						<span class="song-type">Finale</span>
 					</div>
 				</div>
+				<button class="songs-toggle" id="songsToggle">
+					<span class="songs-toggle-text">Show All 17 Songs</span>
+					<span class="songs-toggle-icon">↓</span>
+				</button>
 			</div>
 		</section>
 
