--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 							"Every great musical invites us to feel something we didn't expect
 							— and to leave the theatre forever changed."
 						</blockquote>
-						<cite>— Quote attribution here</cite>
+						<cite>— Quote Attribution</cite>
 					</div>
 
 					<!-- ─────────────────────────────────────
@@ -178,8 +178,7 @@
 							<div>
 								<div class="act-title">Act I Title</div>
 								<div class="act-desc">
-									Act I description — a brief teaser of what the audience will
-									experience in the first act.
+									Act I description — Brief teaser of what happens in act 1.
 								</div>
 							</div>
 						</div>
@@ -188,8 +187,7 @@
 							<div>
 								<div class="act-title">Act II Title</div>
 								<div class="act-desc">
-									Act II description — the stakes rise, relationships deepen,
-									and the world of the show expands.
+									Act II description — Brief teaser of what happens in act 2.
 								</div>
 							</div>
 						</div>
@@ -198,8 +196,9 @@
 							<div>
 								<div class="act-title">Act III Title</div>
 								<div class="act-desc">
-									Act III description — everything comes to a head in a finale
-									that will leave no heart untouched.
+									Act III description — Brief teaser of what happens in act 3.
+									EG: everything comes to a head in a finale that will leave no
+									heart untouched.
 								</div>
 							</div>
 						</div>
@@ -427,10 +426,7 @@
 							<svg viewBox="0 0 24 24"><polygon points="5,3 19,12 5,21" /></svg>
 						</div>
 						<p>Original Cast Recording</p>
-						<small
-							>Embed your Spotify, Apple Music, or SoundCloud playlist
-							here</small
-						>
+						<small>Spotify, Apple Music, or SoundCloud goes here </small>
 						<div class="soundwave">
 							<div class="bar"></div>
 							<div class="bar"></div>
@@ -601,28 +597,19 @@
 				<div class="reviews-carousel reveal" id="reviewsCarousel">
 					<!-- REVIEW 1 — Edit text and source -->
 					<div class="review-card" data-review="0">
-						<p class="review-text">
-							"Review quote goes here. Replace this with your first critical
-							review or press quote."
-						</p>
+						<p class="review-text">"Review quote 1."</p>
 						<span class="review-source">— Publication Name</span>
 					</div>
 
 					<!-- REVIEW 2 — Edit text and source -->
 					<div class="review-card" data-review="1" style="display: none">
-						<p class="review-text">
-							"Second review quote goes here. Replace this with another critical
-							review or press quote."
-						</p>
+						<p class="review-text">"Review quote 2"</p>
 						<span class="review-source">— Publication Name</span>
 					</div>
 
 					<!-- REVIEW 3 — Edit text and source -->
 					<div class="review-card" data-review="2" style="display: none">
-						<p class="review-text">
-							"Third review quote goes here. Replace this with another critical
-							review or press quote."
-						</p>
+						<p class="review-text">"Review quote 3"</p>
 						<span class="review-source">— Publication Name</span>
 					</div>
 				</div>
@@ -661,33 +648,28 @@
 						<!-- VENUE 1 — Edit name, location, dates, and href -->
 						<a href="#" class="venue-card" target="_blank" rel="noopener">
 							<div class="venue-name">Theatre Name</div>
-							<div class="venue-location">City, State</div>
-							<div class="venue-dates">Dates TBA</div>
+							<div class="venue-location">City, County</div>
+							<div class="venue-dates">Dates</div>
 							<span class="venue-cta">BUY TICKETS →</span>
 						</a>
 
 						<!-- VENUE 2 -->
 						<a href="#" class="venue-card" target="_blank" rel="noopener">
 							<div class="venue-name">Theatre Name</div>
-							<div class="venue-location">City, State</div>
-							<div class="venue-dates">Dates TBA</div>
+							<div class="venue-location">City, County</div>
+							<div class="venue-dates">Dates</div>
 							<span class="venue-cta">BUY TICKETS →</span>
 						</a>
 
 						<!-- VENUE 3 -->
 						<a href="#" class="venue-card" target="_blank" rel="noopener">
 							<div class="venue-name">Theatre Name</div>
-							<div class="venue-location">City, State</div>
-							<div class="venue-dates">Dates TBA</div>
+							<div class="venue-location">City, County</div>
+							<div class="venue-dates">Dates</div>
 							<span class="venue-cta">BUY TICKETS →</span>
 						</a>
 					</div>
 				</div>
-
-				<p class="tickets-note">
-					Additional venues and dates will be announced. Join our mailing list
-					to be the first to know.
-				</p>
 			</div>
 		</section>
 
@@ -708,7 +690,6 @@
 				<div class="endquote-socials">
 					<!-- EDIT: Replace # with your social URLs -->
 					<a href="#" class="social-link">Instagram</a>
-					<a href="#" class="social-link">TikTok</a>
 					<a href="#" class="social-link">X / Twitter</a>
 					<a href="#" class="social-link">Facebook</a>
 					<a href="#" class="social-link">YouTube</a>
