--- a/accessibility.html
+++ b/accessibility.html
@@ -126,16 +126,16 @@
 					<div class="footer-col">
 						<h4>The Show</h4>
 						<ul>
-							<li><a href="#story">The Story</a></li>
-							<li><a href="#numbers">Musical Numbers</a></li>
-							<li><a href="#gallery">Gallery</a></li>
-							<li><a href="#reviews">Reviews</a></li>
+							<li><a href="index.html#story">The Story</a></li>
+							<li><a href="index.html#numbers">Musical Numbers</a></li>
+							<li><a href="index.html#gallery">Gallery</a></li>
+							<li><a href="index.html#reviews">Reviews</a></li>
 						</ul>
 					</div>
 					<div class="footer-col">
 						<h4>Visit</h4>
 						<ul>
-							<li><a href="#tickets">Buy Tickets</a></li>
+							<li><a href="index.html#tickets">Buy Tickets</a></li>
 							<li><a href="#">Venues & Dates</a></li>
 							<li><a href="accessibility.html">Accessibility</a></li>
 						</ul>
